--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Prepare docker-compose.prod.yml
         run: |
           sed -i "s~__WORKSPACE_IMAGE__~${REGISTRY}/portfolio/laradock/workspace:${GITHUB_SHA::8}~g" docker-compose.prod.yml
-          sed -i "s~__PHP_FPM_IMAGE__~${REGISTRY}/portfolioop2date/laradock/php-fpm:${GITHUB_SHA::8}~g" docker-compose.prod.yml
+          sed -i "s~__PHP_FPM_IMAGE__~${REGISTRY}/portfolio/laradock/php-fpm:${GITHUB_SHA::8}~g" docker-compose.prod.yml
           sed -i "s~__PHP_WORKER_IMAGE__~${REGISTRY}/portfolio/laradock/php-worker:${GITHUB_SHA::8}~g" docker-compose.prod.yml
           sed -i "s~__NGINX_IMAGE__~${REGISTRY}/portfolio/laradock/nginx:${GITHUB_SHA::8}~g" docker-compose.prod.yml
 
@@ -46,7 +46,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Login to DockerHub
-        run: echo "${DOCKER_HUB_PASSWORD}" | docker login -u optimisapps --password-stdin
+        run: echo "${DOCKER_HUB_PASSWORD}" | docker login -u valerianc --password-stdin
 
       - name: Enable BuildKit
         run: echo '{"experimental": "enabled"}' | sudo tee /etc/docker/daemon.json
