--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,51 +4,59 @@ on:
   push:
     branches:
       - '**'
- 
+
 env:
-  REGISTRY: valerianc
+  REGISTRY: registry.valerianchar.fr 
+  REGISTRY_USER: admin                         
   DOCKER_HUB_PASSWORD: ${{ secrets.DOCKER_HUB_PASSWORD }}
+  REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}  
 
 jobs:
   build-and-push:
-    runs-on: ubuntu-latest 
-    outputs:
-      sha: ${{ steps.vars.outputs.sha }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         service: [workspace, php-fpm, php-worker, nginx]
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Set commit SHA
+      - name: Set short SHA
         id: vars
         run: echo "sha=${GITHUB_SHA::8}" >> $GITHUB_OUTPUT
 
       - name: Copy .env.example to .env
         run: cp .env.example .env
 
-      - name: Replace oh-my-zsh setting
+      - name: Disable oh-my-zsh in .env
         run: sed -i 's/SHELL_OH_MY_ZSH=true/SHELL_OH_MY_ZSH=false/g' .env
 
       - name: Prepare docker-compose.prod.yml
         run: |
-          sed -i "s~__WORKSPACE_IMAGE__~${REGISTRY}/portfolio/laradock/workspace:${GITHUB_SHA::8}~g" docker-compose.prod.yml
-          sed -i "s~__PHP_FPM_IMAGE__~${REGISTRY}/portfolio/laradock/php-fpm:${GITHUB_SHA::8}~g" docker-compose.prod.yml
-          sed -i "s~__PHP_WORKER_IMAGE__~${REGISTRY}/portfolio/laradock/php-worker:${GITHUB_SHA::8}~g" docker-compose.prod.yml
-          sed -i "s~__NGINX_IMAGE__~${REGISTRY}/portfolio/laradock/nginx:${GITHUB_SHA::8}~g" docker-compose.prod.yml
+          SHA=${{ steps.vars.outputs.sha }}
+          sed -i "s~__WORKSPACE_IMAGE__~${REGISTRY}/portfolio/workspace:${SHA}~g" docker-compose.prod.yml
+          sed -i "s~__PHP_FPM_IMAGE__~${REGISTRY}/portfolio/laradock/php-fpm:${SHA}~g" docker-compose.prod.yml
+          sed -i "s~__PHP_WORKER_IMAGE__~${REGISTRY}/portfolio/laradock/php-worker:${SHA}~g" docker-compose.prod.yml
+          sed -i "s~__NGINX_IMAGE__~${REGISTRY}/portfolio/laradock/nginx:${SHA}~g" docker-compose.prod.yml
+          cat docker-compose.prod.yml
+
+      - name: Docker Info
+        run: docker info
 
       - name: Login to DockerHub
         run: echo "${DOCKER_HUB_PASSWORD}" | docker login -u valerianc --password-stdin
 
-      - name: Enable BuildKit
-        run: 'echo "{\"experimental\": \"enabled\"}" | sudo tee /etc/docker/daemon.json'
+      - name: Login to Private Registry
+        run: echo "${REGISTRY_PASSWORD}" | docker login -u "${REGISTRY_USER}" --password-stdin "${REGISTRY}"
 
+      - name: Enable Docker BuildKit
+        run: |
+          echo '{"features":{"buildkit":true}}' | sudo tee /etc/docker/daemon.json
+          sudo systemctl restart docker
 
       - name: Docker Compose Build ${{ matrix.service }}
-        run: |
-          docker compose -f docker-compose.yml -f docker-compose.prod.yml build ${{ matrix.service }}
+        run: docker compose -f docker-compose.yml -f docker-compose.prod.yml build ${{ matrix.service }}
 
       - name: Docker Compose Push ${{ matrix.service }}
-        run: |
-          docker compose -f docker-compose.yml -f docker-compose.prod.yml push ${{ matrix.service }}
+        run: docker compose -f docker-compose.yml -f docker-compose.prod.yml push ${{ matrix.service }}
