--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Prepare docker-compose.prod.yml
         run: |
           SHA=${{ steps.vars.outputs.sha }}
-          sed -i "s~__WORKSPACE_IMAGE__~${REGISTRY}/portfolio/workspace:${SHA}~g" docker-compose.prod.yml
+          sed -i "s~__WORKSPACE_IMAGE__~${REGISTRY}/portfolio/laradock/workspace:${SHA}~g" docker-compose.prod.yml
           sed -i "s~__PHP_FPM_IMAGE__~${REGISTRY}/portfolio/laradock/php-fpm:${SHA}~g" docker-compose.prod.yml
           sed -i "s~__PHP_WORKER_IMAGE__~${REGISTRY}/portfolio/laradock/php-worker:${SHA}~g" docker-compose.prod.yml
           sed -i "s~__NGINX_IMAGE__~${REGISTRY}/portfolio/laradock/nginx:${SHA}~g" docker-compose.prod.yml
